# ReliabilityTestingCamera

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  DEVELOPMENT_HISTORY.md  PROJECT.md  README.md  create_deployment.ps1  event_config.ini  start.bat  start_reliability_camera.bat  start_simple.bat
.claude/: settings.local.json
Deployment/: DEPLOYMENT_INSTRUCTIONS.txt  README.md  START_CAMERA.bat  START_HERE.bat  event_config.ini
include/: app_config.h  camera_manager.h  image_manager.h  noise_analyzer.h  scattering_analyzer.h
include/camera/: bias_manager.h  camera_controller.h  event_processor.h  feature_manager.h  hardware_feature.h
include/camera/features/: antiflicker_feature.h  erc_feature.h  monitoring_feature.h  roi_feature.h  trail_filter_feature.h
include/core/: app_state.h  camera_state.h  display_settings.h  event_metrics.h  frame_sync.h
include/ui/: camera_feed_panel.h  event_rate_chart.h  features_panel.h  ga_panel.h  image_dialog.h  settings_panel.h  ui_panel.h  viewer_panel.h
include/video/: frame_buffer.h  frame_processor.h  frame_ref.h  gpu_compute.h  simd_utils.h  texture_manager.h  triple_buffer_renderer.h
include/video/filters/: roi_filter.h  subtraction_filter.h  video_filter.h
src/: app_config.cpp  camera_manager.cpp  image_manager.cpp  main.cpp  noise_analyzer.cpp  scattering_analyzer.cpp
src/camera/: bias_manager.cpp  camera_controller.cpp  event_processor.cpp  feature_manager.cpp
src/camera/features/: antiflicker_feature.cpp  erc_feature.cpp  monitoring_feature.cpp  roi_feature.cpp  trail_filter_feature.cpp
src/core/: app_state.cpp  camera_state.cpp  display_settings.cpp  event_metrics.cpp  frame_sync.cpp
src/ui/: camera_feed_panel.cpp  event_rate_chart.cpp  features_panel.cpp  ga_panel.cpp  image_dialog.cpp  settings_panel.cpp  viewer_panel.cpp
src/video/: frame_buffer.cpp  frame_processor.cpp  gpu_compute.cpp  simd_utils.cpp  texture_manager.cpp  triple_buffer_renderer.cpp
src/video/filters/: roi_filter.cpp  subtraction_filter.cpp
